# slingshot-community

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  makeme.bat  makeme.sh
common/containers/: CMakeLists.txt
common/geometry/: CMakeLists.txt
common/graph/: CMakeLists.txt
common/json/: CMakeLists.txt
common/logger/: CMakeLists.txt
common/math/: CMakeLists.txt
cuda_common/: CMakeLists.txt  README.md
cuda_common/buffers/: CMakeLists.txt
cuda_common/geometry/: CMakeLists.txt
cuda_common/include/: defines.cuh
cuda_common/math/: CMakeLists.txt
cuda_common/plop/: CMakeLists.txt
cuda_common/tests/: CMakeLists.txt  test_plop.cu  test_segment.cu  test_vector3.cu
datamodel/: CMakeLists.txt  data_constants.h  data_constraint_balljoint.c  data_constraint_balljoint.h  data_constraint_collision.c  data_constraint_collision.h  data_constraint_friction.c  data_constraint_friction.h  data_constraint_gear.c  data_constraint_gear.h  data_constraint_revolute_joint.c  data_constraint_revolute_joint.h  data_constraint_revolute_motor.c  data_constraint_revolute_motor.h  data_constraint_rotation_1d.c  data_constraint_rotation_1d.h  data_constraint_translation_1d.c  data_constraint_translation_1d.h  data_enums.h  data_force_constant.c  data_force_constant.h  data_force_drag.c  data_force_drag.h  data_force_spring.c  data_force_spring.h  data_force_velocity_damper.c  data_force_velocity_damper.h  data_gauss_map_face.c  data_gauss_map_face.h  data_gauss_map_mesh.c  data_gauss_map_mesh.h  data_gjk_result.c  data_gjk_result.h  data_isometric_collider.c  data_isometric_collider.h  data_isometric_transform.c  data_isometric_transform.h  data_lean_neighbor_triangle.c  data_lean_neighbor_triangle.h  data_logger_config.c  (+64 more)
demos/: .gitignore  CMakeLists.txt  RUNNING_DEMOS.md
demos/api/: CMakeLists.txt  no_viz.cpp  standard_viz_config.json  viz.cpp
demos/benchmarks/: 10x10_cloth_scenario.json  4x4_cloth_scenario.json  8x8_cloth_scenario.json  capsule_floor_1024.json  capsule_floor_16.json  capsule_floor_256.json  capsule_floor_64.json  small_shapes_1.json  small_shapes_2.json  small_shapes_3.json  small_shapes_4.json  sphere_capsule_floor_1024.json  sphere_capsule_floor_16.json  sphere_capsule_floor_256.json  sphere_capsule_floor_64.json  sphere_cylinder_floor_1024.json  sphere_cylinder_floor_16.json  sphere_cylinder_floor_256.json  sphere_cylinder_floor_64.json  sphere_floor_1024.json  sphere_floor_16.json  sphere_floor_256.json  sphere_floor_64.json  viz_small_shapes_1.json  viz_small_shapes_3.json  viz_small_shapes_4.json
demos/buggy/: CMakeLists.txt  buggy_callback.cpp  buggy_callback.hpp  buggy_camera_controller.cpp  buggy_camera_controller.hpp  buggy_suspension_scenario.json  viz.cpp  viz_config.json
demos/built_in_meshes/: CMakeLists.txt  main.cpp
demos/dear_imgui/: CMakeLists.txt  main.cpp
demos/geometry/: CMakeLists.txt  main.cpp
demos/hull_generator/: CMakeLists.txt  main.cpp
demos/ludum_dare_52/: CMakeLists.txt  ld52_callback.cpp  ld52_callback.hpp  ld52_camera_controller.cpp  ld52_camera_controller.hpp  ld52_gui.cpp  ld52_gui.hpp  ld52_map.json  main.cpp  veggie_state.cpp  veggie_state.hpp  viz_config.json
demos/opengl_renderer/: CMakeLists.txt  main.cpp
demos/plinko/: CMakeLists.txt  main.cpp  plinko_callback.cpp  plinko_callback.hpp
demos/quadruped/: CMakeLists.txt  README.md  main.cpp  quadruped_callback.cpp  quadruped_callback.hpp  quadruped_gui.cpp  quadruped_gui.hpp  quadruped_motors.json
demos/scenarios/: 2_cyl_engine.json  2x2x5_blocks.json  2x2x5_blocks_horizontal_smash.json  2x2x5_blocks_smash.json  3_cyl_engine.json  ball_joint_3dof.json  big_box_stack_scenario.json  big_fall_scenario.json  big_scenario_test.json  box_stack_scenario.json  humanoid.json  janky_scissor.json  keva_small.json  nan_test_scenario.json  pendulum_collider_scenario.json  piston_table.json  piston_table_collisions.json  popping.json  ragdoll_floor.json  ragdoll_sandbox.json  revolute_joint_scenario.json  stack_smash_scenario.json  viz_2_cyl_engine.json  viz_3_cyl_engine.json  viz_janky_scissor.json
demos/youtube/: CMakeLists.txt
editor/: CMakeLists.txt  camera_control_gui.cpp  camera_control_gui.hpp  editor.cpp  editor.hpp  editor_gui.cpp  editor_gui.hpp  main.cpp
editor/widgets/: balljoint_widget.cpp  balljoint_widget.hpp  component_widget_interface.cpp  component_widget_interface.hpp  constant_force_widget.cpp  constant_force_widget.hpp  damper_force_widget.cpp  damper_force_widget.hpp  drag_force_widget.cpp  drag_force_widget.hpp  drag_torque_widget.cpp  drag_torque_widget.hpp  gear_widget.cpp  gear_widget.hpp  revolute_joint_widget.cpp  revolute_joint_widget.hpp  revolute_motor_widget.cpp  revolute_motor_widget.hpp  rigid_body_widget.cpp  rigid_body_widget.hpp  rotation_1d_widget.cpp  rotation_1d_widget.hpp  shape_widgets.cpp  shape_widgets.hpp  spring_force_widget.cpp  spring_force_widget.hpp  translation_1d_widget.cpp  translation_1d_widget.hpp
physics/: CMakeLists.txt  handle.cpp  handle.hpp
physics/collision_pipeline/: CMakeLists.txt  aabb_calculator.hpp  broadphase_system.hpp  collision_contacts.cpp  collision_contacts.hpp  collision_geometry_system.hpp  collision_manifold_system.hpp  manifold_component_jankifier.hpp  narrowphase_system.hpp  sat_system.hpp
physics/constraints/: CMakeLists.txt  collision_system.hpp  constrained_rigidbody_system.cpp  constrained_rigidbody_system.hpp  constraint_output.cpp  (+9 more)
slingshot/: CMakeLists.txt  default_callback.cpp  default_callback.hpp  default_gui.cpp  default_gui.hpp  slingshot.cpp  slingshot.hpp  slingshot_callback_base.hpp  slingshot_viz.cpp
viz/: CMakeLists.txt  basic_shader.cpp  basic_shader.hpp  callbacks.cpp  callbacks.hpp  camera.hpp  default_camera_controller.cpp  default_camera_controller.hpp  flat_mesh_buffer.cpp  flat_mesh_buffer.hpp  gl_common.hpp  grid.hpp  gui_callback_base.hpp  hid_interface.hpp  opengl_renderer.cpp  opengl_renderer.hpp  util.cpp  util.hpp  viz_renderer.cpp  viz_renderer.hpp  viz_types.hpp  viztypeconverters.cpp  viztypeconverters.hpp
(+525 files in other folders)
