add_subdirectory( api )

if (BUILD_VIZ)
   add_subdirectory( built_in_meshes )
   add_subdirectory( buggy )
   add_subdirectory( dear_imgui )
   add_subdirectory( geometry )
   add_subdirectory( hull_generator )
   add_subdirectory( ludum_dare_52 )
   add_subdirectory( opengl_renderer )
   add_subdirectory( plinko )
   add_subdirectory( quadruped )
   add_subdirectory( youtube )
endif()
